# cann-operator-generation

./: prompt_v9.md
agentic-generation/: .gitignore  README.md  eval.config.json  package-lock.json  package.json  prompt.txt
agentic-generation/cases/case_1/: prompt.txt
agentic-generation/cases/case_10/: prompt.txt
agentic-generation/cases/case_11/: prompt.txt
agentic-generation/cases/case_3/: prompt.txt
agentic-generation/cases/case_4/: prompt.txt
agentic-generation/cases/case_5/: prompt.txt
agentic-generation/cases/case_6/: prompt.txt
agentic-generation/cases/case_7/: prompt.txt
agentic-generation/cases/case_8/: prompt.txt
agentic-generation/cases/case_9/: prompt.txt
agentic-generation/src/: bootstrap-manual.js  cases.js  cli.js  config.js  dependencies.js  evaluator.js  metrics.js  opencode-runner.js  utils.js  validation.js
ops/add_float32_broadcast_case029/: CMakeLists.txt  README.md  add_float32_broadcast_case029.asc  todo.md
ops/add_float32_broadcast_case029/docs/: design.md  environment.json  review.md
